updated html docType and minor fixes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Istok+Web&family=Roboto+Slab:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/layout.css">
@@ -25,14 +21,13 @@
                 <div class="search-wrapper float-right">
                     <form action="#" class="search-form">
                         <div class="search-bar-wrapper float-left">
-                            <img src="./images/search-round-left.png">
+                            <img src="./images/search-round-left.png" alt="rounder">
                             <span class="search-bar">
-                                <input type="text" class="search-input"
-                                    value="Search by Term, Member, or Entry Title"></input>
+                                <input type="text" class="search-input" value="Search by Term, Member, or Entry Title">
                                 <span class="cross-icon"><img src="./images/cross-icon.png" alt="cross-icon"></span>
                             </span>
                             <span class="search-icon"><img src="./images/search-icon.png" alt="search-icon"></span>
-                            <img src="./images/search-round-right.png" class="search-right-round">
+                            <img src="./images/search-round-right.png" class="search-right-round" alt="rounder">
                         </div>
                         <div class="search-button-wrapper float-right">
                             <img src="./images/search-button-left.png" alt="button-left">
@@ -70,8 +65,9 @@
             <div class="nav-right-wrapper float-right">
                 <span class="topic-box-invite"><a href="#">
                         <img src="./images/hover-box-icon.png" alt="icon" class="active">
-                        <span class="topic-box-text">Topic Boxes Invite</span>
-                </span></a>
+                        <span class="topic-box-text">Topic Boxes Invite</span></a>
+                </span>
+                
                 <span class="friend-request">
                     <a href="#"><img src="./images/user-icon.png" alt="icon">
                         <span class="friend-request-text">Topic Boxes Invite</span></a>
