fixed round search bar and search, html4 and css2 validated

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Istok+Web&family=Roboto+Slab:wght@300&display=swap"
-        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
@@ -20,20 +19,38 @@
                 </div>
                 <div class="search-wrapper float-right">
                     <form action="#" class="search-form">
+
+
                         <div class="search-bar-wrapper float-left">
-                            <img src="./images/search-round-left.png" alt="rounder">
-                            <span class="search-bar">
-                                <input type="text" class="search-input" value="Search by Term, Member, or Entry Title">
-                                <span class="cross-icon"><img src="./images/cross-icon.png" alt="cross-icon"></span>
-                            </span>
-                            <span class="search-icon"><img src="./images/search-icon.png" alt="search-icon"></span>
-                            <img src="./images/search-round-right.png" class="search-right-round" alt="rounder">
+                            <div class="search-round-left">
+                                <div class="search-round-right">
+                                    <div class="search-bar-content">
+                                        <div class="search-bar">
+                                            <input type="text" class="search-input"
+                                                value="Search by Term, Member,Entry Title">
+                                            <span class="cross-icon"><img src="./images/cross-icon.png"
+                                                    alt="cross-icon"></span>
+                                        </div>
+                                        <span class="search-icon"><img src="./images/search-icon.png"
+                                                alt="search-icon"></span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+
+
+
                         <div class="search-button-wrapper float-right">
-                            <img src="./images/search-button-left.png" alt="button-left">
-                            <button class="search-button">SEARCH</button>
-                            <img src="./images/search-button-right.png" alt="button-right" class="button-right-round">
+                            <div class="search-button-left">
+                                <div class="search-button-right">
+                                    <button class="search-button">SEARCH</button>
+                                </div>
+                            </div>
                         </div>
+
+
+
                     </form>
                 </div>
             </div>
@@ -67,7 +84,7 @@
                         <img src="./images/hover-box-icon.png" alt="icon" class="active">
                         <span class="topic-box-text">Topic Boxes Invite</span></a>
                 </span>
-                
+
                 <span class="friend-request">
                     <a href="#"><img src="./images/user-icon.png" alt="icon">
                         <span class="friend-request-text">Topic Boxes Invite</span></a>
@@ -219,7 +236,7 @@
                             </div>
                             <div class="body-content-text">
                                 <div class="highlight-text dark-blue-text">NEW ENTRY!</div>
-                                <div class="title-text blue-text">Blade Runner, The Director's Cut</div>
+                                <div class="title-text">Blade Runner, The Director's Cut</div>
                                 <div class="detail-text">by <span class="blue-text">Mary Pilot</span> | <span
                                         class="date">February 8, 2012</span></div>
                                 <div class="from-topic-text">From Topic Box: <span class="blue-text">Behind the
