--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <span class="friend-request">
                     <a href="#"><img src="./images/user-icon.png" alt="icon">
-                        <span class="friend-request-text">Topic Boxes Invite</span></a>
+                        <span class="friend-request-text">Friend Requests</span></a>
                 </span>
             </div>
         </div>
